--- a/style.scss
+++ b/style.scss
@@ -19,16 +19,19 @@ body {
   height: 100vh;
 }
 
+// landing page/ Navigation
+h1 {
+  font-size: 32px;
+  font-weight: bold;
+  padding-bottom: 1rem;
+}
+
 nav {
   text-align: center;
   background-color: whitesmoke;
   border-radius: 10px;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   padding: 1rem 2rem;
-  label {
-    font-size: 32px;
-    font-weight: bold;
-  }
   ul {
     list-style: none;
     a {
@@ -41,3 +44,5 @@ nav {
     }
   }
 }
+
+// To Do List
