--- a/style.css
+++ b/style.css
@@ -14,18 +14,17 @@ body {
 .wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   height: 100vh;
 }
-
-h1 {
+.wrapper h1 {
   font-size: 32px;
   font-weight: bold;
   padding-bottom: 1rem;
 }
 
 nav {
+  margin: auto;
   text-align: center;
   background-color: whitesmoke;
   border-radius: 10px;
@@ -42,4 +41,67 @@ nav ul a {
 }
 nav ul a:hover {
   color: blue;
+}
+
+.container {
+  margin-top: 5rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+.container h1 {
+  flex-basis: 100%;
+  text-align: center;
+}
+.container input {
+  width: 250px;
+  padding: 0.5rem;
+  border-radius: 5px;
+  border: 1px solid darkgray;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  text-transform: capitalize;
+  outline: none;
+}
+.container input::-moz-selection {
+  color: black;
+  background-color: #d9e7ff;
+}
+.container input::selection {
+  color: black;
+  background-color: #d9e7ff;
+}
+.container .add-btn {
+  color: white;
+  background-color: blue;
+  padding: 0.5rem;
+  border-radius: 5px;
+  border: 1px solid darkgray;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+}
+
+.task-container, .completed {
+  max-width: 1400px;
+  margin: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: center;
+}
+.task-container .task, .completed .task, .completed .completed-task {
+  padding: 0.5rem;
+  border-radius: 5px;
+  border: 1px solid darkgray;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  display: flex;
+  width: 300px;
+  align-items: baseline;
+  gap: 0.5rem;
+  padding: 0.5rem 1rem;
+  text-transform: capitalize;
+}
+
+.completed {
+  margin: 0;
 }/*# sourceMappingURL=style.css.map */
