--- a/style.scss
+++ b/style.scss
@@ -14,19 +14,19 @@ body {
 .wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   height: 100vh;
+  h1 {
+    font-size: 32px;
+    font-weight: bold;
+    padding-bottom: 1rem;
+  }
 }
 
 // landing page/ Navigation
-h1 {
-  font-size: 32px;
-  font-weight: bold;
-  padding-bottom: 1rem;
-}
 
 nav {
+  margin: auto;
   text-align: center;
   background-color: whitesmoke;
   border-radius: 10px;
@@ -46,3 +46,64 @@ nav {
 }
 
 // To Do List
+.container {
+  margin-top: 5rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  h1 {
+    flex-basis: 100%;
+    text-align: center;
+  }
+  input {
+    width: 250px;
+    padding: 0.5rem;
+    border-radius: 5px;
+    border: 1px solid darkgray;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    text-transform: capitalize;
+    outline: none;
+    &::selection {
+      color: black;
+      background-color: #d9e7ff;
+    }
+  }
+  .add-btn {
+    color: white;
+    background-color: blue;
+    padding: 0.5rem;
+    border-radius: 5px;
+    border: 1px solid darkgray;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  }
+}
+.task-container {
+  // border: 1px red solid;
+  max-width: 1400px;
+  margin: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: center;
+  .task {
+    padding: 0.5rem;
+    border-radius: 5px;
+    border: 1px solid darkgray;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    display: flex;
+    width: 300px;
+    align-items: baseline;
+    gap: 0.5rem;
+    padding: 0.5rem 1rem;
+    text-transform: capitalize;
+  }
+}
+.completed {
+  @extend.task-container;
+  margin: 0;
+  .completed-task {
+    @extend .task;
+  }
+}
